--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -60,7 +60,7 @@
         <div class="single-card__section">
             <h3 class="single-card__section-title">Ингридиенты:</h3>
             <div class="single-card__items single-card__items_column">
-              {% for unit in recipe.unit_set.all %}
+              {% for unit in recipe.ingredient_amount.all %}
                 <p class=" single-card__section-item">{{ unit.ingredient.title }} - {{ unit.amount }} {{ unit.ingredient.dimension }}</p>
               {% endfor %}
             </div>
