1st review attempt

--- a/recipes/templates/recipes/recipe_item.html
+++ b/recipes/templates/recipes/recipe_item.html
@@ -3,10 +3,10 @@
   <div class="card__body">
     <a class="card__title link" href="{% url 'recipe_detail' recipe.pk %}" target="_blank">{{ recipe.title }}</a>
     <ul class="card__items">
-      {% for tag in recipe.tags.all %}
-        {% if tag.name == 'Обед' %}
+      {% for tag in recipe.tags %}
+        {% if tag == 'lunch' %}
           <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-        {% elif tag.name == 'Завтрак' %}
+        {% elif tag == 'breakfast' %}
           <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
         {% else %}
           <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
