--- a/recipes/templates/recipes/create_recipe.html
+++ b/recipes/templates/recipes/create_recipe.html
@@ -8,82 +8,81 @@
   {% include 'header.html' %}
 {% endblock %}
 {% block content %}
-  {% csrf_token %}
+<!--  {% csrf_token %}-->
   <div class="main__header">
       <h1 class="main__title">Создание рецепта</h1>
   </div>
-  <div class="form-container">
-      <form class="form" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          <div class="form__group">
-              <label for="id_name" class="form__label">Название рецепта</label>
-              <div class="form__field-group">
-                  <input type="text" id="id_name" name="name" class="form__input">
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__group">
-              <p class="form__label">Теги</p>
-              <div class="form__field-group">
-                  <div class="tags">
-                      <div class="tags__item">
-                          <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
-                          <label for="id_breakfast" class="tags__label">Завтрак</label>
-                      </div>
-                      <div class="tags__item">
-                          <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
-                          <label for="id_lunch" class="tags__label">Обед</label>
-                      </div>
-                      <div class="tags__item">
-                          <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
-                          <label for="id_dinner" class="tags__label">Ужин</label>
-                      </div>
-                  </div>
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__group">
-              <label for="nameIngredient" class="form__label">Ингредиенты</label>
-              <div class="form__field-group">
-                  <div class="form__field-group-ingredientes">
-                      <div class="form__dropdown">
-                          <input type="text" id="nameIngredient" class="form__input">
-                          <div class="form__dropdown-items"></div>
-                      </div>
-                      <input type="number" id="cantidad" class="form__input" min="0">
-                      <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
-                  </div>
-                  <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__group">
-              <label for="id_time" class="form__label">Время приготовления</label>
-              <div class="form__field-group form__field-group_time">
-                  <input type="text" id="id_time" name="name" class="form__input">
-                  <label for="id_time" class="form__label">минут</label>
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__group">
-              <label for="id_description" class="form__label">Описание</label>
-              <div class="form__field-group">
-                  <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__group">
-              <span class="form__label">Загрузить фото</span>
-              <div class="form__field-group">
-                  <input type="file" name="file" id="id_file">
-                  <span class="form__error"></span>
-              </div>
-          </div>
-          <div class="form__footer">
-              <button class="button button_style_blue">Создать рецепт</button>
-          </div>
-      </form>
-  </div>
+<div class="form-container">
+        <form class="form" method="post" enctype="multipart/form-data" id="main-form">
+            {% csrf_token %}
+            {% for field in form %}
+                {% if field.name == 'tags' %}
+                    <div class="form__group">
+                        <p class="form__label">Теги</p>
+                        <div class="form__field-group">
+                            <div class="tags">
+                                <div class="tags__item">
+                                    <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange" {% if 'breakfast' in field.value %}checked{% endif %}>
+                                    <label for="id_breakfast" class="tags__label">Завтрак</label>
+                                </div>
+                                <div class="tags__item">
+                                    <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" {% if 'lunch' in field.value %}checked{% endif %}>
+                                    <label for="id_lunch" class="tags__label">Обед</label>
+                                </div>
+                                <div class="tags__item">
+                                    <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" {% if 'dinner' in field.value %}checked{% endif %}>
+                                    <label for="id_dinner" class="tags__label">Ужин</label>
+                                </div>
+                            </div>
+                            <span class="form__error">{{ field.errors }}</span>
+                            <div style="display: none;">{{ field }}</div>
+                        </div>
+                    </div>
+
+                    <div class="form__group">
+                        <label for="nameIngredient" class="form__label">Ингредиенты</label>
+                        <div class="form__field-group">
+                            <div class="form__field-group-ingredientes">
+                                <div class="form__dropdown">
+                                    <input type="text" id="nameIngredient" class="form__input">
+                                    <div class="form__dropdown-items"></div>
+                                </div>
+                                <input type="number" id="cantidad" class="form__input" min="0">
+                                <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
+                            </div>
+                            <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
+                            <span class="form__error" id="ingredient-error">{% if error %}Необходимо выбрать ингредиенты.{% endif %}</span>
+                        </div>
+                    </div>
+
+                {% elif field.name == 'cooking_time' %}
+                    <div class="form__group">
+                        <label class="form__label">{{ field.label }}</label>
+                        <div class="form__field-group">
+                            <div class="form__field-group form__field-group_time">
+                              {{ field }}
+                              <label for="id_time" class="form__label">минут</label>
+                            </div>
+                        </div>
+                    </div>
+                    <span class="form__error">{{ field.errors }}</span>
+
+                {% else %}
+                    <div class="form__group">
+                        <label class="form__label">{{ field.label }}</label>
+                        <div class="form__field-group">
+                          {{ field }}
+                        </div>
+                    </div>
+                    <span class="form__error">{{ field.errors }}</span>
+                {% endif %}
+            {% endfor %}
+            <div class="form__footer">
+              <button class="button button_style_blue" type="submit" id="submit-button">Создать рецепт</button>
+            </div>
+       </form>
+    </div>
+
   {% block script %}
     <script src=" {% static 'js/config/config.js' %}"></script>
     <script src="{% static 'js/components/Header.js' %}"></script>
