--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -22,15 +22,15 @@
             {% endif %}
         </div>
         <ul class="single-card__items">
-            {% for tag in recipe.tags.all %}
-              {% if tag.name == 'Обед' %}
-                <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-              {% elif tag.name == 'Завтрак' %}
-                <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-              {% else %}
-                <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
-              {% endif %}
-            {% endfor %}
+        {% for tag in recipe.tags %}
+          {% if tag == 'lunch' %}
+            <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
+          {% elif tag == 'breakfast' %}
+            <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
+          {% else %}
+            <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
+          {% endif %}
+        {% endfor %}
         </ul>
         <div class="single-card__items single-card__items_column">
             <p class="single-card__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
@@ -58,7 +58,7 @@
           </ul>
         {% endif %}
         <div class="single-card__section">
-            <h3 class="single-card__section-title">Ингридиенты:</h3>
+            <h3 class="single-card__section-title">Ингредиенты:</h3>
             <div class="single-card__items single-card__items_column">
               {% for unit in recipe.ingredient_amount.all %}
                 <p class=" single-card__section-item">{{ unit.ingredient.title }} - {{ unit.amount }} {{ unit.ingredient.dimension }}</p>
