--- a/recipes/templates/recipes/recipe_item.html
+++ b/recipes/templates/recipes/recipe_item.html
@@ -20,12 +20,12 @@
   </div>
   {% if request.user.is_authenticated %}
     <div class="card__footer">
-        {% if recipe in shopping_list_recipes %}
+        {% if recipe.pk in shopping_list_recipes %}
           <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span>Рецепт добавлен</button>
         {% else %}
           <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
         {% endif %}
-        <button class="button button_style_none" name="favorites" {% if recipe not in favorites_recipes %}data-out{% endif %}><span class="icon-favorite {% if recipe in favorites_recipes %}icon-favorite_active{% endif %}"></span></button>
+        <button class="button button_style_none" name="favorites" {% if recipe.pk not in favorites_recipes %}data-out{% endif %}><span class="icon-favorite {% if recipe.pk in favorites_recipes %}icon-favorite_active{% endif %}"></span></button>
     </div>
   {% endif %}
 </div>
