--- a/recipes/templates/recipes/create_recipe.html
+++ b/recipes/templates/recipes/create_recipe.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="{% static 'pages/form.css' %}">
 {% endblock %}
 {% block header %}
-  {% include 'header.html' %}
+  {% include 'header.html' with create_recipe=True%}
 {% endblock %}
 {% block content %}
 <!--  {% csrf_token %}-->
