--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{% static 'pages/form.css' %}">
 {% endblock %}
 {% block header %}
-  {% include 'header.html' %}
+  {% include 'header.html' with password_change=True%}
 {% endblock %}
 {% block content %}
   <div class="main__header">
