--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,14 +1,17 @@
+{% load formatting_tags %}
+
+
 <ul class="tags">
-    <li class="tags__item">
-        <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange {% if 'breakfast' in tags %}tags__checkbox_active{% endif %}" {% if 'tag' in request.GET %}href="{{ request.get_full_path }}&tag=breakfast"{% else %}href="?tag=breakfast"{% endif %}></a>
-        <span class="tags__label">Завтрак</span>
-    </li>
-    <li class="tags__item">
-        <a id="lunch" class="tags__checkbox tags__checkbox_style_green {% if 'lunch' in tags %}tags__checkbox_active{% endif %}" {% if 'tag' in request.GET %}href="{{ request.get_full_path }}&tag=lunch"{% else %}href="?tag=lunch"{% endif %}></a>
-        <span for="lunch" class="tags__label">Обед</span>
-    </li>
-    <li class="tags__item">
-        <a id="dinner" class="tags__checkbox tags__checkbox_style_purple {% if 'dinner' in tags %}tags__checkbox_active{% endif %}" {% if 'tag' in request.GET %}href="{{ request.get_full_path }}&tag=dinner"{% else %}href="?tag=dinner"{% endif %}></a>
-        <label for="dinner" class="tags__label">Ужин</label>
-    </li>
-</ul>
+            <li class="tags__item">
+                <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange {% if 'breakfast' in tags %}tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|formatting_tags:"breakfast" }}"></a>
+                <span class="tags__label">Завтрак</span>
+            </li>
+            <li class="tags__item">
+                <a id="lunch" class="tags__checkbox tags__checkbox_style_green {% if 'lunch' in tags %}tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|formatting_tags:"lunch" }}"></a>
+                <span for="lunch" class="tags__label">Обед</span>
+            </li>
+            <li class="tags__item">
+                <a id="dinner" class="tags__checkbox tags__checkbox_style_purple {% if 'dinner' in tags %}tags__checkbox_active{% endif %}" href="{{ request.path }}?tags={{ request|formatting_tags:"dinner" }}"></a>
+                <label for="dinner" class="tags__label">Ужин</label>
+            </li>
+        </ul>
