--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -35,7 +35,7 @@
         <div class="single-card__items single-card__items_column">
             <p class="single-card__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
             <ul class="single-card__items">
-                <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ recipe.author.username }}</p></li>
+                <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span><a style="color: #000" href="{% url 'profile' recipe.author.username %}">{{ recipe.author.username }}</a></p></li>
                 {% if user == recipe.author %}
                   <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'change_recipe' recipe.pk %}" class="single-card__text">Редактировать рецепт</a></li>
                 {% endif %}
