--- a/recipes/templates/recipes/profile.html
+++ b/recipes/templates/recipes/profile.html
@@ -10,7 +10,7 @@
 {% block content %}
   {% csrf_token %}
   <div class="main__header">
-    <h1 class="main__title">{{ profile.username }}</h1>
+    <h1 class="main__title">{{ profile.get_full_name }}</h1>
     {% include 'tags.html' %}
   </div>
   {% if request.user.username != profile.username and request.user.is_authenticated %}
