--- a/recipes/templates/recipes/recipe_item.html
+++ b/recipes/templates/recipes/recipe_item.html
@@ -15,7 +15,7 @@
     </ul>
     <div class="card__items card__items_column">
       <p class="card__text"><span class="icon-time"></span> {{ recipe.cooking_time }} мин.</p>
-      <p class="card__text"><span class="icon-user"></span> <a href="{% url 'profile' recipe.author.username %}" style="color: black">{{ recipe.author.username}}</a></p>
+      <p class="card__text"><span class="icon-user"></span> <a href="{% url 'profile' recipe.author.username %}" style="color: black">{{ recipe.author.get_full_name}}</a></p>
     </div>
   </div>
   {% if request.user.is_authenticated %}
