--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="form__group">
-          <label for="{{ form.username.id_for_label }}" class="form__label">Пароль</label>
+          <label for="{{ form.password.id_for_label }}" class="form__label">Пароль</label>
           <div class="form__field-group">
             {{ form.password|add_class:'form__input' }}
             {% if form.errors %}
